# nanoCC

./: README.md  pyproject.toml
nanocc/: __init__.py  agent.py  cli.py  tools.py
